[package]
name = "mp4-to-gif-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.1.0"
image = "0.25.5"
gif = "0.13.1"
tempfile = "3.14.0"
anyhow = "1.0.94"
rayon = "1.10.0"
crossbeam-channel = "0.5.13"
num_cpus = "1.16.0"
color_quant = "1.1.0"
gifski = "1.32.0"
imgref = "1.11.0"
rgb = "0.8.50"
